--- a/src/com/gboban70/jmailer/TODO.txt
+++ b/src/com/gboban70/jmailer/TODO.txt
@@ -11,4 +11,5 @@ FUTURE:
 - add support for sending message body
 - add support for html messages
 - add support for attachments
+- create separate Class for handling commandline parameters - should be reusable.
 
