--- a/src/com/gboban70/jmailer/TODO.txt
+++ b/src/com/gboban70/jmailer/TODO.txt
@@ -6,10 +6,13 @@ in JMailer.java
 + NOTHING TO FIX - fix bug when switch that requires parameters is the last argument on the command line
 + update version to version v0.0.4
 
+v0.0.9
+- add support for sending message body
+
 FUTURE:
 - NOT SURE ABOUT THIS: remove unnecessary use of ArrayList for arguments (only needed for contains() and indexOf()?)
-- add support for sending message body
 - add support for html messages
 - add support for attachments
 - create separate Class for handling commandline parameters - should be reusable.
-
+- JavaDoc
+- Add JUnit tests
